<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/det_info_slash"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_dynamic_primary60"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="USD" />

    <TextView
        android:id="@+id/tvTextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/det_info_text_price"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSlash" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextPrice"
        app:layout_constraintStart_toEndOf="@id/tvTextPrice"
        app:layout_constraintTop_toTopOf="@id/tvTextPrice"
        tools:text="4561.3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="#3A3A3A"
        app:layout_constraintTop_toBottomOf="@id/tvTextPrice"/>

    <TextView
        android:id="@+id/tvTextHighDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/det_info_text_high_day"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextPrice" />

    <TextView
        android:id="@+id/tvHighDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textColor="#43A047"
        app:layout_constraintBottom_toBottomOf="@id/tvTextHighDay"
        app:layout_constraintStart_toEndOf="@id/tvTextHighDay"
        app:layout_constraintTop_toTopOf="@id/tvTextHighDay"
        tools:text="4923.4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="#3A3A3A"
        app:layout_constraintTop_toBottomOf="@id/tvTextHighDay"  />

    <TextView
        android:id="@+id/tvTextLowDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/det_info_text_low_day"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextHighDay" />

    <TextView
        android:id="@+id/tvLowDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextLowDay"
        app:layout_constraintStart_toEndOf="@id/tvTextLowDay"
        app:layout_constraintTop_toTopOf="@id/tvTextLowDay"
        tools:text="4351.7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="#3A3A3A"
        app:layout_constraintTop_toBottomOf="@id/tvTextLowDay" />

    <TextView
        android:id="@+id/tvTextLastVolumeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/det_info_text_last_volume_to"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextLowDay" />

    <TextView
        android:id="@+id/tvLastVolumeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextLastVolumeTo"
        app:layout_constraintStart_toEndOf="@id/tvTextLastVolumeTo"
        app:layout_constraintTop_toTopOf="@id/tvTextLastVolumeTo"
        tools:text="Company"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="#3A3A3A"
        app:layout_constraintTop_toBottomOf="@id/tvTextLastVolumeTo"/>

    <TextView
        android:id="@+id/tvTextLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/det_info_last_update"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextLastVolumeTo" />

    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextLastUpdate"
        app:layout_constraintStart_toEndOf="@id/tvTextLastUpdate"
        app:layout_constraintTop_toTopOf="@id/tvTextLastUpdate"
        tools:text="00:00:01"  />

</androidx.constraintlayout.widget.ConstraintLayout>